name:                hastat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hastat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hastat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database
                     , Plot
                     , Models
                     , AhoCorasick
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , authenticate-oauth
                     , aeson
                     , http-client
                     , http-client-tls
                     , QuickPlot
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , monad-control
                     , monad-logger
                     , data-default-class
                     , text
                     , exceptions
                     , mtl
                     , array
                     , dotenv
                     , bytestring
                     , utf8-string